--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-flash": "0.1.1",
     "mongodb": "2.0.42",
     "markdown": "0.5.0",
-    "multer": "0.1.6"
+    "multer": "0.1.6",
+    "connect-flash": "0.1.1"
   }
 }
