--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongodb": "2.0.42",
     "markdown": "0.5.0",
     "multer": "0.1.6",
-    "connect-flash": "0.1.1"
+    "connect-flash": "0.1.1",
+    "markdown": "0.5.0",
+    "multer": "0.1.6"
   }
 }
